--- a/package.json
+++ b/package.json
@@ -25,8 +25,22 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.2",
+    "@tiptap/extension-bullet-list": "^3.0.1",
+    "@tiptap/extension-image": "^3.0.1",
+    "@tiptap/extension-link": "^3.0.1",
+    "@tiptap/extension-list-item": "^3.0.1",
+    "@tiptap/extension-ordered-list": "^3.0.1",
+    "@tiptap/extension-table": "^3.0.1",
+    "@tiptap/extension-table-cell": "^3.0.1",
+    "@tiptap/extension-table-header": "^3.0.1",
+    "@tiptap/extension-table-row": "^3.0.1",
+    "@tiptap/extension-underline": "^3.0.1",
+    "@tiptap/pm": "^3.0.1",
+    "@tiptap/react": "^3.0.1",
+    "@tiptap/starter-kit": "^3.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "react": "^19.0.0",
