Refactor Course and Lesson Management APIs, Enhance Ordering Logic
- Updated API endpoints for assigning and unassigning courses and lessons, ensuring proper order management.
- Introduced new endpoints for reordering courses and lessons within their respective modules and courses.
- Improved error handling and validation in API responses for better feedback on unauthorized actions.
- Enhanced type safety in the Supabase types, adding new fields for order and legacy IDs.
- Refactored existing API logic to normalize order values for courses and lessons, ensuring consistent behavior across the application.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:fix": "next lint --fix",
     "format": "prettier --write .",
     "type-check": "tsc --noEmit",
-    "db-types": "supabase gen types typescript --local > src/types/supabase.ts",
+    "db-types": "npx supabase gen types typescript --project-id bdjluwlwxqdgkulkjozj > src/types/supabase.ts",
     "db-reset": "supabase db reset",
     "db-push": "supabase db push",
     "prepare": "husky"
