--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
+    "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
