--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tiptap/extension-table-header": "^3.0.1",
     "@tiptap/extension-table-row": "^3.0.1",
     "@tiptap/extension-text-align": "^3.0.8",
+    "@tiptap/extension-text-style": "^3.0.9",
     "@tiptap/extension-underline": "^3.0.1",
     "@tiptap/pm": "^3.0.1",
     "@tiptap/react": "^3.0.1",
