--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.2",
     "@tiptap/extension-bullet-list": "^3.0.1",
+    "@tiptap/extension-font-size": "^3.0.0-next.3",
     "@tiptap/extension-image": "^3.0.1",
     "@tiptap/extension-link": "^3.0.1",
     "@tiptap/extension-list-item": "^3.0.1",
@@ -39,6 +40,7 @@
     "@tiptap/extension-table-header": "^3.0.1",
     "@tiptap/extension-table-row": "^3.0.1",
     "@tiptap/extension-text-align": "^3.0.8",
+    "@tiptap/extension-text-style": "^3.0.9",
     "@tiptap/extension-underline": "^3.0.1",
     "@tiptap/pm": "^3.0.1",
     "@tiptap/react": "^3.0.1",
