--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tiptap/extension-bullet-list": "^3.0.1",
     "@tiptap/extension-font-size": "^3.0.0-next.3",
     "@tiptap/extension-image": "^3.0.1",
+    "@tiptap/extension-youtube": "^3.0.1",
     "@tiptap/extension-link": "^3.0.1",
     "@tiptap/extension-list-item": "^3.0.1",
     "@tiptap/extension-ordered-list": "^3.0.1",
@@ -45,6 +46,7 @@
     "@tiptap/pm": "^3.0.1",
     "@tiptap/react": "^3.0.1",
     "@tiptap/starter-kit": "^3.0.1",
+    "dompurify": "^3.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
