--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.2",
+    "@tailwindcss/typography": "^0.5.16",
     "@tiptap/extension-bullet-list": "^3.0.1",
     "@tiptap/extension-font-size": "^3.0.0-next.3",
     "@tiptap/extension-image": "^3.0.1",
-    "@tiptap/extension-youtube": "^3.0.1",
     "@tiptap/extension-link": "^3.0.1",
     "@tiptap/extension-list-item": "^3.0.1",
     "@tiptap/extension-ordered-list": "^3.0.1",
@@ -43,19 +43,21 @@
     "@tiptap/extension-text-align": "^3.0.8",
     "@tiptap/extension-text-style": "^3.0.9",
     "@tiptap/extension-underline": "^3.0.1",
+    "@tiptap/extension-youtube": "^3.0.1",
     "@tiptap/pm": "^3.0.1",
     "@tiptap/react": "^3.0.1",
     "@tiptap/starter-kit": "^3.0.1",
-    "dompurify": "^3.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.1.7",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
+    "styled-jsx": "^5.1.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
   },
