--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-hook-form": "^7.59.0",
     "styled-jsx": "^5.1.7",
     "tailwind-merge": "^3.3.1",
+    "vercel": "^49.1.2",
     "zod": "^3.25.67"
   },
   "devDependencies": {
